syntax = "proto3";
package messages;
option csharp_namespace = "Cluster.HelloWorld.Messages";

//dotnet run -p ../../../protobuf/ProtoGrainGenerator/ProtoGrainGenerator.csproj --framework net5.0 many *.proto

message HelloRequest {}
message HelloResponse {
    string Message=1;
}

service HelloGrain {
	rpc SayHello(HelloRequest) returns (HelloResponse) {}
}